git-ops/ingress/templates/ir-argo.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
spec:
  routes:
    - kind: Rule
      match: Host(`argo.internal`)
      services:
        - name: argocd-server
          port: 443
          scheme: https
          serversTransport: backendTLS
