git-ops/ingress/templates/ir-storage.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: ir-storage
  namespace: rook-ceph
spec:
  routes:
    - kind: Rule
      match: Host(`storage.internal`)
      services:
        - name: rook-ceph-mgr-dashboard
          port: 8443
          scheme: https
          serversTransport: backend-trust-storage
  tls:
    secretName: cert-internal-storage-tls
