git-ops/ingress/templates/ir-vault.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: ir-vault
  namespace: vault
spec:
  routes:
    - kind: Rule
      match: Host(`vault.internal`)
      services:
        - name: vault-ui
          port: 8200
          scheme: https
          serversTransport: backend-trust-vault
  tls:
    secretName: cert-internal-vault-tls
